--- a/index.html
+++ b/index.html
@@ -1,12 +1,387 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | My Neat Code</title>
+    <title>MyNeatCode Digital Learning Products</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome to My Neat Code</h1>
+   <!------------------------------------ HEADER ---------------------------------------------------------------------->
+<header id="header">
+    <nav id="nav-bar">
+      <ul class="nav-list">
+        <ul class="nav-left">
+          <li>
+            <a href="#">
+              <!-- <img id="header-img" src="img/logo.png" alt="logo"> -->
+              <h2 id="logo-h">MyNeatCode</h2>
+            </a>
+          </li>
+        </ul>
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler">
+          <div class="hamburger">
+            <div></div>
+          </div>
+          <div class="menu">
+            <div>
+              <div>
+                <ul class="nav-list">
+                  <li class="nav-elements">
+                    <a class="nav-link" href="#services">Services</a>
+                  </li>
+                  <li class="nav-elements">
+                    <a class="nav-link" href="#testimonials">Testimonials</a>
+                  </li>
+                  <li class="nav-elements">
+                    <a class="nav-link" href="#pricing">Pricing</a>
+                  </li>
+                  <li class="nav-elements">
+                    <a class="nav-link" href="#contact">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ul>
+    </nav>
+  
+  </header>
+  <!------------------------------------ HEADER ENDS ---------------------------------------------------------------------->
+  
+  <div class="container">
+    <!------------------------------------ HERO ---------------------------------------------------------------------->
+    <section id="hero">
+      <div class="hero-text">
+        <h1>
+          Robot Tech World.
+        </h1>
+        <p class="description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam laboriosam tenetur sapiente dolore aliquid
+          doloribus ipsum ipsa quae cupiditate cumque commodi expedita sequi repudiandae.
+        </p>
+        <a href="#contact" class="hero-btn btn align-center text-small btn-2">Get Started</a>
+      </div>
+      <div class="hero-image image-container">
+        <img src="https://blush.design/api/download?shareUri=dJS6JwGYL9MRKzCT&c=Bottom_0%7E2b44ff-0.1%7E393f82_Hair_0%7Eb58143-0.1%7E2c1b18_Skin_0%7Ed4a181-0.1%7E915b3c_Top_0%7Ef2f2f2-0.1%7Eff4133&w=800&h=800&fm=png" alt="Hero Image">
+      </div>
+    </section>  
+    <!------------------------------------ HERO ENDS ---------------------------------------------------------------------->
+    <!------------------------------------ SERVICES ---------------------------------------------------------------------->
+    <a id="services" href="#"></a>
+    <section class="section">
+      <div class="section-title">
+        <h2 class="title">
+          Services
+        </h2>
+      </div>
+      <p class="title-description align-center">
+        We provide a wide range of services to help you achieve your goals.
+      </p>
+  
+      <div class="section-container">
+        <div class="image-container">
+          <img src="https://blush.design/api/download?shareUri=KFsVi9D9uDmnW990&c=Bottom_0%7E2b44ff-0.1%7E89c5cc-0.2%7E393f82_Hair_0%7Eb58143-0.1%7E4a312c-0.2%7E2c1b18_Skin_0%7Eb28b67-0.1%7E915b3c-0.2%7E57331f_Top_0%7Ef2f2f2-0.1%7Effa434-0.2%7Ef2f2f2&w=800&h=800&fm=png"
+               alt="">
+        </div>
+        <div class="text-container">
+          <h2 class="heading">
+            Transform Your Brand
+          </h2>
+          <p class="description">
+            We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through
+            compelling
+            visuals that do most of the marketing for you.
+          </p>
+          <a href="#" class="btn align-center text-small btn-2">Learn more</a>
+        </div>
+  
+        <div class="text-container">
+          <h2 class="heading">
+            Stand out to your right audience 
+          </h2>
+          <p class="description">
+            We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through
+            compelling
+            visuals that do most of the marketing for you.
+          </p>
+          <a href="#" class="btn align-center text-small btn-2">Learn more</a>
+        </div>
+        <div class="image-container">
+          <img src="https://blush.design/api/download?shareUri=xn8Q-KHP2M3NvjHn&c=Bottom_0%7E393f82-0.1%7E393f82_Hair_0%7E181658-0.1%7E4a312c_Skin_0%7Eb28b67-0.1%7Eb28b67_Top_0%7Ef2f2f2-0.1%7Eff4133&w=800&h=800&fm=png"
+               alt="">
+        </div>
+  
+        <div class="image-container">
+          <img src="https://blush.design/api/download?shareUri=YgoovesLoucwyMcG&c=Bottom_0%7E393f82-0.1%7E393f82-0.2%7E2b44ff-0.3%7E393f82_Hair_0%7E2c1b18-0.1%7E4a312c-0.2%7Ee8e1e1-0.3%7Ee8e1e1_Skin_0%7E915b3c-0.1%7Eeac7a8-0.2%7E915b3c-0.3%7Eeac7a8_Top_0%7Effa434-0.1%7E43d26c-0.2%7Effa434-0.3%7Eff4133&w=800&h=800&fm=png"
+               alt="">
+        </div>
+        <div class="text-container">
+          <h2 class="heading">
+            Transform Your Brand
+          </h2>
+          <p class="description">
+            We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through
+            compelling
+            visuals that do most of the marketing for you.
+          </p>
+          <a href="#" class="btn align-center text-small btn-2">Learn more</a>
+        </div>
+      </div>
+    </section>
+    <!------------------------------------ SERVICES END ---------------------------------------------------------------------->
+  
+  
+    <!------------------------------------ TESTIMONIALS ---------------------------------------------------------------------->
+  
+    <a id="testimonials" href="#"></a>
+    <section class="section">
+      <div class="section-title">
+        <h2 class="title">
+          Testimonials
+        </h2>
+      </div>
+      <div id="video-player">
+        <iframe 
+                id="video" 
+                height="350"
+                src="https://www.youtube-nocookie.com/embed/p0bGHP-PXD4?rel=0&amp;controls=0&amp;showinfo=0"
+                frameborder="0"
+                allowfullscreen>
+        </iframe>
+      </div>
+    </section>
+    <!------------------------------------ TESTIMONIALS END ---------------------------------------------------------------------->
+  
+  
+    <!------------------------------------ PRICING ---------------------------------------------------------------------->
+    <a id="pricing" href="#"></a>
+    <section class="section">
+      <div class="section-title">
+        <h2 class="title">
+          Pricing
+        </h2>
+      </div>
+      <p class="title-description align-center">
+        We provide a wide range of services to help you achieve your goals.
+      </p>
+      <div class="pricing-container">
+        <div class="pricing-card-container align-center">
+          <h1 class="pricing-card-title align-center">
+            Basic
+          </h1>
+          <p class="pricing-card-description align-center">
+            <span class="small currency align-center">₹</span>199<span class="small">/month</span>
+          </p>
+          <ul class="pricing-card-features">
+            <li>
+              <p class="pricing-card-feature">
+                Branding
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Website
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Social Media
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Email Marketing
+              </p>
+            </li>
+          </ul>
+          <a href="#" class="btn align-center text-small pricing-btn">Get Started</a>
+        </div>
+        <div class="pricing-card-container align-center">
+          <h1 class="pricing-card-title align-center">
+            Standard
+          </h1>
+          <p class="pricing-card-description align-center">
+            <span class="small currency align-center">₹</span>299<span class="small">/month</span>
+          </p>
+          <ul class="pricing-card-features">
+            <li>
+              <p class="pricing-card-feature">
+                Branding
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Social Media
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Email Marketing
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                SEO
+              </p>
+            </li>
+          </ul>
+          <a href="#" class="btn align-center text-small pricing-btn">Get Started</a>
+        </div>
+  
+        <div class="pricing-card-container align-center">
+          <h1 class="pricing-card-title align-center">
+            Premium
+          </h1>
+          <p class="pricing-card-description align-center">
+            <span class="small currency align-center">₹</span>349<span class="small">/month</span>
+          </p>
+          <ul class="pricing-card-features">
+            <li>
+              <p class="pricing-card-feature">
+                Email Marketing
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                SEO
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Content Creation
+              </p>
+            </li>
+            <li>
+              <p class="pricing-card-feature">
+                Graphic Design
+              </p>
+            </li>
+          </ul>
+          <a href="#" class="btn align-center text-small pricing-btn">Get Started</a>
+        </div>
+      </div>
+    </section>
+    <!------------------------------------ PRICING ENDS ---------------------------------------------------------------------->
+  
+  
+    <!------------------------------------ FOOTER ---------------------------------------------------------------------->
+  
+    <a id="contact" href="#"></a>
+    <footer id="footer">
+      <div class="footer-container">
+        <h1 class="footer-text align-center">
+          Stay in the loop
+        </h1>
+  
+        <p class="footer-description align-center">
+          Subscribe to our newsletter to get the latest news and updates.
+        </p>
+  
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <input type="email" name="email" id="email" placeholder="Enter your email address">
+          <input type="submit" id="submit" class="btn align-center text-small footer-btn" value="Subscribe">
+        </form>
+      </div>
+  
+      <ul class="footer-list">
+        <dd class="footer-list-item">
+          <a href="#"><img id="logo" src="img/logo.png" alt="Robot"></a>
+        </dd>
+        <dl class="footer-list-container">
+          <dt class="footer-list-title">
+            Solutions
+          </dt>
+          <dd class="footer-list-item">
+            <a href="#">Why Us?</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Features</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Services</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Customer Stories</a>
+          </dd>
+        </dl>
+  
+        <dl class="footer-list-container">
+          <dt class="footer-list-title">
+            Resources
+          </dt>
+          <dd class="footer-list-item">
+            <a href="#">Documentation</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">API</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Help Center</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">App Directory</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Download</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Tips & Tricks</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Members Program</a>
+          </dd>
+        </dl>
+  
+        <dl class="footer-list-container">
+          <dt class="footer-list-title">
+            Pricing
+          </dt>
+          <dd class="footer-list-item">
+            <a href="#">Free Trial</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">For Teams</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Enterprise</a>
+          </dd>
+        </dl>
+  
+        <dl class="footer-list-container">
+          <dt class="footer-list-title">
+            About
+          </dt>
+          <dd class="footer-list-item">
+            <a href="#">Our Story</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Blog</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Careers</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">News Room</a>
+          </dd>
+          <dd class="footer-list-item">
+            <a href="#">Legal</a>
+          </dd>
+        </dl>
+      </ul>
+  
+      <p class="footer-copyright align-center">
+        Copyright &copy; 2022 Robot Inc.
+      </p>
+  
+    </footer>
+  </div>
+  
 </body>
+
 </html>
